[APPBUG-5816] Fixes free item bar alignment issue
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@83230 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/selfCredit.css
+++ b/projects/Media/docroot/assets/css/global/selfCredit.css
@@ -926,8 +926,7 @@
   flex-basis: 7%;
 }
 .order-line .disable-order-line {
-  margin: 0 15px;
-  flex-basis: 50%;
+  flex-basis: calc(42% + 15px);
 }
 .order-line .disable-order-line .title {
   background-color: #f4f4f4;
